[tool.poetry]
name = "gnss_lib_py"
version = "0.1.0"
description = "Python code to process, simulate and demonstrate using GNSS measurements"
authors = ["Ashwin Kanhere"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
DateTime = "^4.3"
georinex = "^1.15.0"
unlzw3 = "^0.2.1"
reindent = "^3.5.1"
pynmea2 = "^1.18.0"
pytest = "^6.2.5"
pylint = "^2.11.1"
pytest-cov = "^3.0.0"
NavPy = "^1.0"

[tool.poetry.dev-dependencies]
Sphinx = "4.1.1"
sphinx-rtd-theme = "0.5.2"
sphinxcontrib-napoleon = "0.7"
notebook = "^6.4.2"
ipykernel = "^6.0.3"
jupyter = "^1.0.0"
pyproj = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"