[tool.poetry]
name = "gnss-lib-py"
version = "0.1.6"
description = "Modular Python tool for parsing, analyzing, and visualizing Global Navigation Satellite Systems (GNSS) data and state estimates"
authors = ["Derek Knowles <dcknowles@stanford.edu>",
           "Ashwin Kanhere <akanhere@stanford.edu>",
           ]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Stanford-NavLab/gnss_lib_py"
documentation = "https://gnss-lib-py.readthedocs.io/en/latest/"
keywords = ["gnss"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7.1, < 3.11"
numpy = "^1.21.0"
pandas = "^1.3.0"
DateTime = "^4.3"
georinex = "^1.15.0"
unlzw3 = "^0.2.1"
reindent = "^3.5.1"
pynmea2 = "^1.18.0"
pytest = "^6.2.5"
pylint = "^2.11.1"
pytest-cov = "^3.0.0"
scipy = "^1.7.3"
jupyter = "^1.0.0"
pytest-lazy-fixture = "^0.6.3"
matplotlib = "^3.5.1"
plotly = "^5.8.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-napoleon = "^0.7"
notebook = "^6.4.2"
ipykernel = "^6.0.3"
jupyter = "^1.0.0"
pylint-exit = "^1.2.0"
nbsphinx = "^0.8.9"
nbsphinx-link = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
