[tool.poetry]
name = "gnss-lib-py"
version = "1.0.4"
description = "Modular Python tool for parsing, analyzing, and visualizing Global Navigation Satellite Systems (GNSS) data and state estimates"
authors = ["Derek Knowles <dcknowles@stanford.edu>",
           "Ashwin Kanhere <akanhere@stanford.edu>",
           ]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Stanford-NavLab/gnss_lib_py"
documentation = "https://gnss-lib-py.readthedocs.io/en/latest/"
keywords = ["gnss"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9, < 3.13"
numpy = "^2.0.0"
pandas = "^2.0.0"
georinex = "<=1.16.1"
unlzw3 = "^0.2.1"
pynmea2 = "^1.18.0"
pytest = ">=7.2"
scipy = "^1.7.3"
jupyter = "^1.0.0"
notebook = ">=6.0.0"
ipykernel = "^6.0.3"
matplotlib = "^3.5.1"
plotly = "^5.8.0"
kaleido = "0.2.1"
requests = "^2.29.0"

[tool.poetry.group.dev.dependencies]
Sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
pylint-exit = "^1.2.0"
nbsphinx = "^0.8.9"
nbsphinx-link = "^1.3.0"
tqdm = "^4.65.0"
pylint = "^2.11.1"
pytest-cov = "^4.0.0"
sphinx-copybutton = "^0.5.2"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
